--- a/frontend/login.html
+++ b/frontend/login.html
@@ -19,7 +19,7 @@
 <body>
   <main class="auth-page">
     <div class="auth-card">
-      <div class="brand" style="margin-bottom: 8px;">TexSaarthi</div>
+      <div class="brand" style="margin-bottom: 8px;"><h1>TexSaarthi</h1></div>
       <h1>Welcome back</h1>
       <p>Please sign in to continue</p>
       <form id="login-form">
@@ -31,8 +31,8 @@
           <label>Password</label>
           <input id="password-input" type="password" placeholder="••••••••">
         </div>
-        <div class="actions">
-          <button class="btn success" type="submit">Sign In</button>
+        <div class="actions" style="margin-top: 6px;">
+          <button class="btn primary" type="submit">Sign In</button>
         </div>
         <div style="margin-top: 8px; font-size: 13px; color: #555;">
           Don't have an account?
