--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -35,8 +35,8 @@
           <label>Password</label>
           <input id="signup-password-input" type="password" placeholder="••••••••">
         </div>
-        <div class="actions">
-          <button class="btn success" type="submit">Create Account</button>
+        <div class="actions" style="margin-top: 6px;">
+          <button class="btn primary" type="submit">Create Account</button>
         </div>
         <div style="margin-top: 8px; font-size: 13px; color: #555;">
           Already have an account?
