--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,6 +6,7 @@
   <title>TexSaarthi - Login</title>
   <link rel="stylesheet" href="styles.css">
   <script src="auth.js" defer></script>
+  <script src="api.js" defer></script>
   <style>
     .auth-page { display: flex; align-items: center; justify-content: center; min-height: 100vh; padding: 20px; }
     .auth-card { background: var(--surface); border: 1px solid var(--border); border-radius: 12px; width: 100%; max-width: 420px; padding: 20px; box-shadow: var(--shadow); }
