--- a/frontend/orders.html
+++ b/frontend/orders.html
@@ -60,50 +60,7 @@
             <th>Actions</th>
           </tr>
         </thead>
-        <tbody id="orders-body">
-          <tr>
-            <td>ORD-001</td>
-            <td>Rajesh Kumar</td>
-            <td>Weaving</td>
-            <td>Cotton</td>
-            <td>50</td>
-            <td>20/01/2024</td>
-            <td>₹25,000</td>
-            <td><span class="status yellow">in progress</span></td>
-            <td class="actions">
-              <button class="btn elevated">View</button>
-              <button class="btn elevated">Edit</button>
-            </td>
-          </tr>
-          <tr>
-            <td>ORD-002</td>
-            <td>Priya Textiles</td>
-            <td>Dyeing</td>
-            <td>Silk</td>
-            <td>30</td>
-            <td>18/01/2024</td>
-            <td>₹45,000</td>
-            <td><span class="status green">ready</span></td>
-            <td class="actions">
-              <button class="btn elevated">View</button>
-              <button class="btn elevated">Edit</button>
-            </td>
-          </tr>
-          <tr>
-            <td>ORD-003</td>
-            <td>Mumbai Fabrics Ltd</td>
-            <td>Tailoring</td>
-            <td>Polyester</td>
-            <td>100</td>
-            <td>25/01/2024</td>
-            <td>₹75,000</td>
-            <td><span class="status blue">received</span></td>
-            <td class="actions">
-              <button class="btn light">View</button>
-              <button class="btn light">Edit</button>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="orders-body"></tbody>
       </table>
     </div>
   </main>
