--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -28,7 +28,7 @@
       <h1>Inventory Management</h1>
       <div>
         <span id="welcome-user" class="hidden" style="margin-right:8px;"></span>
-        <button class="btn primary">Add New Item</button>
+        <a href="add-stock.html" class="btn primary">Add New Item</a>
       </div>
     </header>
 
@@ -54,7 +54,7 @@
       <div class="panel red">
       <h2>Low Stock Alert</h2>
       <p><strong>Silk Thread - Golden</strong> • 25 kg remaining</p>
-        <button class="btn elevated">Add Stock</button>
+        <a href="add-stock.html" class="btn elevated">Add Stock</a>
     </div>
 
     <div class="panel" style="margin-top:12px;">
@@ -67,7 +67,19 @@
         </select>
         <button class="btn">Filter</button>
       </div>
-      <table>
+      <table id="inventory-table">
+        <colgroup>
+          <col style="width: 18%">
+          <col style="width: 10%">
+          <col style="width: 10%">
+          <col style="width: 10%">
+          <col style="width: 10%">
+          <col style="width: 10%">
+          <col style="width: 12%">
+          <col style="width: 12%">
+          <col style="width: 4%">
+          <col style="width: 4%">
+        </colgroup>
         <thead>
           <tr>
             <th>Item Name</th>
@@ -84,51 +96,41 @@
         </thead>
         <tbody>
           <tr>
-            <td>Cotton Fabric</td>
-            <td>Raw Material</td>
-            <td>White</td>
-            <td>150 meters</td>
-            <td>50 meters</td>
-            <td>₹120</td>
-            <td>₹18,000</td>
-            <td>Gujarat Cotton Mills</td>
-            <td><span class="status green">In Stock</span></td>
-            <td>
-              <button class="btn elevated">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Silk Thread</td>
-            <td>Thread</td>
-            <td>Golden</td>
-            <td>25 kg</td>
-            <td>40 kg</td>
-            <td>₹300</td>
-            <td>₹7,500</td>
-            <td>Delhi Threads</td>
-            <td><span class="status red">Low</span></td>
-            <td>
-              <button class="btn elevated">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Polyester Roll</td>
-            <td>Raw Material</td>
-            <td>Blue</td>
-            <td>100 meters</td>
-            <td>60 meters</td>
-            <td>₹80</td>
-            <td>₹8,000</td>
-            <td>Poly Weave Ltd</td>
-            <td><span class="status green">In Stock</span></td>
-            <td>
-              <button class="btn elevated">View</button>
-            </td>
+            <td colspan="10" style="text-align:center; padding:16px; color:#666;">Loading inventory...</td>
           </tr>
         </tbody>
       </table>
     </div>
   </main>
+  <script>
+    // Inject locally saved inventory items with exact column order to match header
+    document.addEventListener('DOMContentLoaded', function(){
+      const tbody = document.querySelector('#inventory-table tbody');
+      if (!tbody) return;
+      let local = [];
+      try { local = JSON.parse(localStorage.getItem('local_inventory') || '[]'); } catch(_) { local = []; }
+      if (!Array.isArray(local) || local.length === 0) return;
+      const toCell = (v) => (v === undefined || v === null || v === '' ? '—' : v);
+      const rows = local.map(item => {
+        const unit = item.unit ? ' ' + item.unit : '';
+        const total = (item.total_value || (Number(item.current_stock||0) * Number(item.cost_per_unit||0))).toLocaleString();
+        return `
+        <tr>
+          <td>${toCell(item.item_name)}</td>
+          <td>${toCell(item.type)}</td>
+          <td>${toCell(item.color)}</td>
+          <td style="text-align:right;">${Number(item.current_stock||0).toLocaleString()}${unit}</td>
+          <td style="text-align:right;">${Number(item.min_stock||0).toLocaleString()}${unit}</td>
+          <td style="text-align:right;">₹${Number(item.cost_per_unit||0).toLocaleString()}</td>
+          <td style="text-align:right;">₹${total}</td>
+          <td>${toCell(item.supplier)}</td>
+          <td>${`<span class=\"status ${getStatusClass(item.status)}\">${String(item.status||'').replace('_',' ')}</span>`}</td>
+          <td style="text-align:right;"><button class="btn elevated" onclick="viewInventoryItem(${item.id})">View</button></td>
+        </tr>`;
+      }).join('');
+      tbody.insertAdjacentHTML('afterbegin', rows);
+    });
+  </script>
 </body>
 </html>
 
