--- a/frontend/reports.html
+++ b/frontend/reports.html
@@ -28,7 +28,7 @@
       <h1>Reports & Analytics</h1>
       <div>
         <span id="welcome-user" class="hidden" style="margin-right:8px;"></span>
-        <button class="btn" onclick="window.location.href='export-report.html'">Export Report</button>
+        <button class="btn" id="export-report-btn">Export Report</button>
         <a id="logout-btn" class="btn hidden" href="login.html">Logout</a>
       </div>
     </header>
@@ -38,6 +38,17 @@
       <p>This is a placeholder page. You can add charts later using any library, but for now it shows a simple message.</p>
     </div>
   </main>
+  <script>
+    document.addEventListener('DOMContentLoaded', function(){
+      var btn = document.getElementById('export-report-btn');
+      if (!btn) return;
+      btn.addEventListener('click', function(){
+        // Trigger backend CSV export without needing a separate HTML file
+        var url = 'http://localhost:3000/api/reports/sales?period=monthly&format=csv';
+        window.open(url, '_blank');
+      });
+    });
+  </script>
 </body>
 </html>
 
